[project]
name = "healthcare-compliance-mcp"
version = "0.1.0"
description = "MCP server for healthcare compliance document retrieval"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"
